[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/config_overlay.gd" type="Script" id=1]

[node name="config_overlay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.490196 )

[node name="config_window" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 20.0
margin_right = -40.0
margin_bottom = -40.0
tab_align = 0

[node name="Audio" type="GridContainer" parent="config_window"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
columns = 2

[node name="master_vol_label" type="Label" parent="config_window/Audio"]
margin_top = 1.0
margin_right = 101.0
margin_bottom = 15.0
text = "Master Volume:"

[node name="master_vol_slider" type="HSlider" parent="config_window/Audio"]
margin_left = 105.0
margin_right = 552.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = -80.0
max_value = 6.0

[node name="music_vol_label" type="Label" parent="config_window/Audio"]
margin_top = 21.0
margin_right = 101.0
margin_bottom = 35.0
text = "Music Volume:"

[node name="music_vol_slider" type="HSlider" parent="config_window/Audio"]
margin_left = 105.0
margin_top = 20.0
margin_right = 552.0
margin_bottom = 36.0
size_flags_horizontal = 3
min_value = -80.0
max_value = 6.0

[node name="sfx_vol_label" type="Label" parent="config_window/Audio"]
margin_top = 41.0
margin_right = 101.0
margin_bottom = 55.0
text = "SFX Volume:"

[node name="sfx_vol_slider" type="HSlider" parent="config_window/Audio"]
margin_left = 105.0
margin_top = 40.0
margin_right = 552.0
margin_bottom = 56.0
size_flags_horizontal = 3
min_value = -80.0
max_value = 6.0

[node name="close" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -82.0
margin_top = 20.0
margin_right = -40.0
margin_bottom = 40.0
text = "Back"

[connection signal="value_changed" from="config_window/Audio/master_vol_slider" to="." method="_on_master_vol_slider_value_changed"]
[connection signal="value_changed" from="config_window/Audio/music_vol_slider" to="." method="_on_music_vol_slider_value_changed"]
[connection signal="value_changed" from="config_window/Audio/sfx_vol_slider" to="." method="_on_sfx_vol_slider_value_changed"]
[connection signal="pressed" from="close" to="." method="_on_close_pressed"]
